add some data for the graphs, fix the title page, some text, and an introdiction

--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -9,9 +9,11 @@
     \includegraphics[height=2cm, keepaspectratio]{Graphic/Logo.png}
 	\end{minipage} \hspace{0.5mm}
 	\begin{minipage}[b][2cm][l]{10cm}
-	{Lehrstuhl für\\
-	Eingebettete Syteme\\
-	der Informationstechnik}
+		\vspace*{\fill}
+		{Lehrstuhl für\\
+		Eingebettete Syteme\\
+		der Informationstechnik}
+		\vspace*{\fill}
 	\end{minipage} \hspace{5mm}
 	\begin{minipage}[b][2.5cm][r]{2.5cm}
 	\centering
@@ -29,7 +31,7 @@
 		Schriftliche Prüfungsarbeit für die Masterprüfung der Fakultät für Elektrotechnik und Informationstechnik an der Ruhr-Universität Bochum (Master-Prüfungsordnung für den Studiengang „Elektrotechnik und Informationstechnik“ an der Ruhr-Universität Bochum vom 12. August 2013)\\
 		\vspace{1cm}
 		{
-			vorgelegt von: \\
+			Author: \\
 		}
 		
 		\vspace{1.5cm}
@@ -37,13 +39,13 @@
 			Henry Bathke \\
 		}
 		\vspace{1.5cm}
-		Datum: \today 
+		Date: \today 
 		\vspace{1.5cm}
 		
 		\begin{tabbing}
 			dies ist nur ein dummy\= für den Tabstopp \kill
-			erster Betreuer: \> Prof. Dr.-Ing Michael Hübner \\
-			zweiter Betreuer: \> M. Sc. Keyvan Shahin
+			First supervisor: \> Prof. Dr.-Ing Michael Hübner \\
+			Second supervisor: \> M. Sc. Keyvan Shahin
 		\end{tabbing}
 		
 	\end{center}
