--- a/commands.tex
+++ b/commands.tex
@@ -16,9 +16,9 @@
 	urlcolor=black,
 	filecolor=black,
 	menucolor=black,
-	pdftitle={Masters Thesis},
+	pdftitle={Master Thesis},
 	pdfauthor={Henry Bathke},
-	pdfsubject={Masters Thesis Design and Implementation of an LDPC-based FEC encoder/decoder suitable for Storage devices},
+	pdfsubject={Master Thesis: Design and Implementation of an LDPC-based FEC encoder/decoder suitable for Storage devices},
 	]{hyperref}
 \usepackage{amsmath}
 \usepackage[english,nameinlink,noabbrev]{cleveref}
