--- a/database.bib
+++ b/database.bib
@@ -160,4 +160,42 @@ M. Tanner. “A recursive approach to low complexity codes”. In coding and mod
     month = {May},
     url = {http://cas.ee.ic.ac.uk/people/dt10/research/rngs-fpga-normal.html}
 } 
-  
+@Article{KoYu01,
+  title = {Low-Density Parity-Check Codes Based on Finite Geometries: A Rediscovery and New Results},
+  author = {Kou, Yu and Lin, Shu and Fossorier, Marc PC},
+  journal = {IEEE TRANSACTIONS ON INFORMATION THEORY},
+  volume = {47},
+  number = {7},
+  pages = {2711},
+  year = {2001}
+}
+@Article{FoMi99, 
+    author = {Marc P. C. Fossorier and Miodrag Mihaljevic and Hideki Imai}, 
+    journal = {IEEE Transactions on Communications}, 
+    title = {Reduced complexity iterative decoding of low-density parity check codes based on belief propagation}, 
+    year = {1999}, 
+    volume = {47}, 
+    number = {5}, 
+    pages = {673-680}, 
+    doi = {10.1109/26.768759}, 
+    ISSN = {0090-6778}, 
+    month = {May}
+}
+@article{CaGh17,
+  author = {Yu Cai and Saugata Ghose and Erich F. Haratsch and Yixin Luo and Onur Mutlu},
+  title = {Errors in Flash-Memory-Based Solid-State Drives: Analysis, Mitigation, and Recovery},
+  journal = {CoRR},
+  volume = {abs/1711.11427},
+  year = {2017},
+  url = {http://arxiv.org/abs/1711.11427},
+  archivePrefix = {arXiv},
+  eprint = {1711.11427},
+}
+@Article{Sh48,
+    author = {C. E. Shannon},
+    title = {A Mathematical Theory of Communication},
+    journal = {The Bell System Technical Journal},
+    volume = {27},
+    year = {1948},
+    pages = {379-423, 623-656}
+}
