--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,9 @@
 % !TeX spellcheck = de_DE
 % !TeX encoding = utf8
 
-\documentclass[parskip, useliterate]{scrreprt}
+\documentclass[parskip, useliterate
+	%, twoside, openright
+]{scrreprt}
 
 \input{commands}
 
