--- a/motivation.tex
+++ b/motivation.tex
@@ -3,6 +3,7 @@
 % !TeX encoding = utf8
 
 \chapter{Motivation}
+In recent times requirements for fast and reliable storage have grown. In most computing markets the is a demand for cheaper, faster, and larger storage. Solid state drives have taken a large portion of the consumer storage market due to their fast access times and mechanical reliability. As manufacturing of flash memory advances the feature size of flash cells has shrunken. This together with the concept of storing multiple bits in every cell has increased raw error rates of the flash memory to highs which are unacceptable to be used directly to store data. This is where forward error correction codes come in. With error correction codes is is possible to store some additional information alongside the data. Then when reading back the data the additional information is used to correct possible errors. To achieve such error correction the are multiple different codes available. Widely used are Bose–Chaudhuri–Hocquenghem (BCH) codes. These offer moderate performance and do so while keeping the hardware cost of encoding and decoding low\cite{CaGh17}. Low density parity check (LDPC) codes on the other hand offer stronger error correction capabilities. Another benefit of LDPC codes is that they can use soft information from the flash memory to gain more information about each bit. The disadvantage are higher hardware requirements. 
 
-
+When transmitting information the work of Shannon in regards to the channel capacity\cite{Sh48} also apply in storage. Here the channel is the flash memory. And each channel use corresponds to a single stored bit. The channel capacity is of interest here because I simulate the channel in this thesis. As the main topic is the LDPC encoder and decoder I will not go into much detail of flash memory. Mainly for performance evaluation the error characteristic of the memory is of interest. In this case I used an additive white gaussian noise channel as this represents the memory good enough.
 
